<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:ignore="ContentDescription"
    tools:context="com.trackm3.censoforestal.Otros">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_track"
        android:id="@+id/track"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:onClick="VincularTrack" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Especie"
        android:id="@+id/lista_especie"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:onClick="VincularEspecie" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Personal"
        android:id="@+id/lista_personas"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:onClick="VincularPersona" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Funcion_trabajador"
        android:id="@+id/lista_funcion"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:onClick="VincularFuncion" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Equipo"
        android:id="@+id/lista_equipo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:onClick="VincularListaEquipo" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Grupo"
        android:id="@+id/lista_grupo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:onClick="VincularGrupo"
        android:nestedScrollingEnabled="false" />
</LinearLayout>
