<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="5dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:ignore="ContentDescription"
    tools:context="com.trackm3.censoforestal.ReferenciaXY"
    android:background="#ff30563c">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ReferenciaXY"
        android:id="@+id/lbl_titulo"
        android:textColor="#ffffffff"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linea1"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Seguim_origen"
            android:id="@+id/lbl_predecesor"
            android:layout_weight="1"
            android:textSize="12sp"
            android:textColor="#ffffffff"
            android:paddingLeft="5dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Registro"
            android:textSize="12sp"
            android:textColor="#ffffffff"
            android:id="@+id/lbl_registro"
            android:layout_weight="1"
            android:gravity="end"
            android:paddingRight="5dp" />
    </TableRow>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/navegacion"
        android:paddingTop="5dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/menu_auxiliar"
            android:src="@drawable/ico_08_menu_aux"
            android:background="#ff30563c" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/invisible"
            android:background="#ff585857"
            android:layout_marginLeft="5dp"
            android:visibility="invisible"
            android:layout_weight="1" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/limpiar"
            android:src="@drawable/ico_11_limpiar"
            android:layout_gravity="top"
            android:background="#ff30563c" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guardar"
            android:src="@drawable/ico_06_guard"
            android:baselineAlignBottom="false"
            android:layout_marginLeft="5dp"
            android:background="#ff30563c" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/atras"
            android:src="@drawable/ico_05_flecha_atr"
            android:layout_marginLeft="5dp"
            android:background="#ff30563c" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/adelante"
            android:src="@drawable/ico_07_flecha_adel"
            android:layout_marginLeft="5dp"
            android:background="#ff30563c" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        android:id="@+id/vista_vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ReferenciaXYnombre"
                android:id="@+id/lbl_punto_referencia"
                android:layout_weight="1"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:textColor="#ffffffff" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/punto_referencia"
                android:layout_weight="1"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/marco1"
                android:textColor="#fffffb52"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Observ"
                android:id="@+id/lbl_observaciones"
                android:layout_weight="1"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:textColor="#ffffffff" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/observaciones"
                android:layout_weight="1"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/marco1"
                android:textColor="#fffffb52"
                android:inputType="text|textMultiLine" />

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#ff64a174"
                android:layout_marginTop="5dp"
                android:paddingBottom="10dp"
                android:id="@+id/tabla1"
                android:stretchColumns="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/linea2">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ZonaCapturaAutomatica"
                        android:id="@+id/lbl_captura_automatica"
                        android:layout_weight="1"
                        android:textColor="#ffffffff"
                        android:layout_span="1"
                        android:gravity="center_horizontal" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:id="@+id/linea3">

                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/testear_gps"
                        android:src="@drawable/ico_13_grabar"
                        android:background="#ff64a174"
                        android:layout_weight="0.5" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:text="@string/Precision"
                        android:id="@+id/precision"
                        android:layout_weight="1"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:background="#ffa2d332"
                        android:gravity="center_vertical|center_horizontal"
                        android:textColor="#ff000000"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:text="@string/AutoXY"
                        android:id="@+id/obtener_xy"
                        android:layout_weight="1"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:textColor="#ffffffff"
                        android:background="#ff4d48fa"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="15dp" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:id="@+id/linea4">

                    <TextView
                        android:text="@string/AutoX"
                        android:id="@+id/auto_x"
                        android:layout_width="0dp"
                        android:layout_height="25dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical|center_horizontal"
                        android:background="#ffffffff"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:textColor="#ff000000" />

                    <TextView
                        android:text="@string/AutoY"
                        android:id="@+id/auto_y"
                        android:layout_width="0dp"
                        android:layout_height="25dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical|center_horizontal"
                        android:background="#ffffffff"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:textColor="#ff000000" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:id="@+id/linea5">

                    <TextView
                        android:text="@string/AutoPrecision"
                        android:id="@+id/auto_precision"
                        android:layout_width="0dp"
                        android:layout_height="25dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical|center_horizontal"
                        android:background="#ffffffff"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:textColor="#ff000000"  />

                    <TextView
                        android:text="@string/Zona"
                        android:id="@+id/zona_utm"
                        android:layout_width="0dp"
                        android:layout_height="25dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical|center_horizontal"
                        android:background="#ffffffff"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:textColor="#ff000000"  />
                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1"
                android:background="#ff5b6577"
                android:id="@+id/tabla2">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/linea6">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ZonaLlenadoManual"
                        android:id="@+id/lbl_llenado_manual"
                        android:layout_weight="1"
                        android:textColor="#ffffffff"
                        android:layout_span="1"
                        android:gravity="center_horizontal" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/linea7">

                    <TextView
                        android:id="@+id/lbl_punto_gps"

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:textColor="#ffffffff"
                        android:text="@string/PuntoGPS" />

                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/linea8">

                    <EditText
                        android:id="@+id/punto_gps"
                        android:hint="@string/PuntoGPS"
                        android:inputType="text"

                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="50dp"
                        android:layout_marginBottom="10dp"
                        android:textColor="#fffeff17"
                        android:background="@drawable/marco1"
                        android:textColorHint="#ff5b6577" />

                </TableRow>

            </TableLayout>
            <Button
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:text="@string/Foto"
                android:id="@+id/btn_foto"
                android:layout_weight="1"
                android:background="@drawable/marco10"
                android:textSize="20sp"
                android:hint="@string/Foto"
                android:onClick="VincularFoto"
                android:textColor="#ff000000"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </ScrollView>



</LinearLayout>
