<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/portada_censo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff7d95ae"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:ignore="ContentDescription"
    tools:context="com.trackm3.censoforestal.Portada">
    <ImageButton
        android:id="@+id/btn_img_menu_portada"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:adjustViewBounds="false"
        android:background="#ff7d95ae"
        android:scaleType="fitStart"
        android:src="@drawable/ico_00_menu_princ" />
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/lbl_censo_forestal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/CensoForestal"
            android:textColor="#ff000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_arbol_censo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ico_01_arbol_censo"
            android:contentDescription=""
            tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbl_sistem"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/Sistematico"
                    android:textColor="#ff000000" />

                <TextView
                    android:id="@+id/lbl_conex"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/title_activity_conexion"
                    android:textColor="#ff000000" />

                <TextView
                    android:id="@+id/lbl_direct"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/title_activity_directo"
                    android:textColor="#ff000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#ff7d95ae"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_img_sistematico"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#ff7d95ae"
                    android:src="@drawable/ico_02_censo_sist"
                    android:onClick="VincularSistem"/>

                <ImageButton
                    android:id="@+id/btn_img_conexion"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#ff7d95ae"
                    android:src="@drawable/ico_03_censo_conex"
                    android:onClick="VincularConexion"/>

                <ImageButton
                    android:id="@+id/btn_img_directo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#ff7d95ae"
                    android:src="@drawable/ico_04_censo_direct"
                    android:onClick="VincularDirect"/>
            </LinearLayout>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Temporal"
            android:id="@+id/temporal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:onClick="VincularOtros"/>
    </LinearLayout>
</ScrollView>

</LinearLayout>
